# devlog-yew

./: Cargo.toml  README.md  index.html
src/: global.css  main.rs  router.rs
src/component/navbar/: mod.rs  style.css
src/js_bind/: mod.rs
src/pages/: mod.rs
src/pages/info/: mod.rs
src/pages/login/: mod.rs  style.css
src/pages/main/: mod.rs
src/pages/not_found/: mod.rs
src/pages/post/: mod.rs
src/pages/posts/: mod.rs  style.css
