[package]
name = "devlog"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
opt-level = 'z'
panic = "abort"
strip = true
codegen-units = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = {  version = "0.21.0", features = ["csr", "ssr"] }
wasm-bindgen = "0.2.87"
js-sys = "0.3.64"
web-sys = { version = "0.3.64" }
yew-router = "0.18.0"
